--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,4 +14,5 @@
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
+  <H1>ADRIANA CAMARGO RUIZ</H1>
 </ion-content>
