--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,4 +14,5 @@
   </ion-header>
 
   <app-explore-container name="Tab 3 page"></app-explore-container>
+  <h1>se realizo otro cambio</h1>
 </ion-content>
